# fidl_json_ir

./: .gitignore  Cargo.toml
src/: decl_path_serde.rs  lib.rs  method_req_res_serde.rs  ser_option.rs  span.rs  table_member_type_serde.rs
