[package]
name = "fidl_json_ir"
version = "0.1.0"
authors = ["Taylor Cramer <cramertj@google.com>"]
edition = "2018"

[dependencies]
indexmap = { version = "1.3.0", features = ["serde-1"] }
serde = { version = "1.0.90", features = ["derive"] }
serde_json = { version = "1.0.39", features = ["arbitrary_precision"] }